--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,15 @@ body {
                            [left-end right-start] 1fr                              
                            [right-end];                     
     grid-template-rows: repeat(4, [row] auto);       
-    grid-gap: 1.5em;  
-    max-width: 700px;  
+    grid-gap: 1.2em;  
+    max-width: 700px; 
+    max-height: 100vh;
     margin: 0 auto;
     padding: .5em;
     border: .1em white solid;
     border-radius: .5em;
     margin-top: 0;
+    margin-bottom: 0;
 }
 header{
     grid-column: 1/3;
@@ -80,9 +82,10 @@ header > .title{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, auto);
+    /* max-height: 60vh; */
 }
 .btns{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding: 1em;
     color: white;
     text-align: center;
@@ -95,8 +98,17 @@ header > .title{
     grid-row: span 4;
     padding-top: 5em;
     font-size: 2rem;
+    background-color: rgb(55, 153, 68);
 }
 #btn-clr{
-    grid-column: 2/4;
     background-color: rgb(38, 127, 156);
+}
+#btn-del{
+    background-color: rgb(194, 47, 27);
+}
+.clicked-btn {
+    background-color:  rgb(38, 127, 156);
+}
+.clr-clicked {
+    background-color:  rgb(63, 61, 61);
 }
